--- a/app/src/main/res/layout/listview_pesquisa_item.xml
+++ b/app/src/main/res/layout/listview_pesquisa_item.xml
@@ -1,24 +1,24 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-              xmlns:tools="http://schemas.android.com/tools"
-              android:orientation="horizontal"
-              android:layout_width="match_parent"
-              android:layout_height="45dp">
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
+    android:layout_height="45dp"
+    android:orientation="horizontal">
 
     <ImageView
         android:id="@+id/icone_lugar"
-        android:layout_marginLeft="10dp"
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
+        android:layout_marginLeft="10dp"
         tools:src="@drawable/monumento" />
 
     <TextView
         android:id="@+id/nome_lugar"
-        android:textSize="15sp"
-        android:gravity="center_vertical"
-        android:layout_marginLeft="15dp"
-        tools:text="Cristo Redentor"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"/>
+        android:layout_height="match_parent"
+        android:layout_marginLeft="15dp"
+        android:gravity="center_vertical"
+        android:textSize="15sp"
+        tools:text="Cristo Redentor" />
 
 </LinearLayout>
