--- a/app/src/main/res/menu/menu_map.xml
+++ b/app/src/main/res/menu/menu_map.xml
@@ -1,8 +1,9 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:riotour="http://schemas.android.com/apk/res-auto">
-    <item android:id="@+id/menu_search"
-        android:title="Pesquisa"
+    <item
+        android:id="@+id/menu_search"
+        android:icon="@android:drawable/ic_menu_search"
         android:orderInCategory="10"
-        riotour:showAsAction="always"
-        android:icon="@android:drawable/ic_menu_search" />
+        android:title="@string/pesquisa"
+        riotour:showAsAction="always" />
 </menu>
