--- a/app/src/main/res/layout/activity_maps.xml
+++ b/app/src/main/res/layout/activity_maps.xml
@@ -18,11 +18,83 @@
         android:layout_alignParentBottom="true"
         android:layout_alignParentRight="true"
         android:layout_centerHorizontal="true"
-        android:layout_marginBottom="65dp"
-        android:layout_marginRight="20dp"
+        android:layout_marginBottom="60dp"
+        android:layout_marginRight="5dp"
         riotour:fab_colorNormal="#64B5F6"
         riotour:fab_colorPressed="#2196F3"
-        riotour:fab_icon="@android:drawable/ic_menu_mylocation" />
+        riotour:fab_icon="@android:drawable/ic_menu_mylocation"
+        riotour:fab_size="mini" />
+
+    <com.getbase.floatingactionbutton.FloatingActionsMenu
+        android:id="@+id/multiple_filters"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentTop="true"
+        android:layout_marginLeft="5dp"
+        android:layout_marginTop="10dp"
+        riotour:fab_addButtonColorNormal="@color/light_blue"
+        riotour:fab_addButtonColorPressed="@color/blue"
+        riotour:fab_addButtonPlusIconColor="@color/white"
+        riotour:fab_addButtonSize="mini"
+        riotour:fab_expandDirection="down"
+        riotour:fab_labelsPosition="right">
+
+        <com.getbase.floatingactionbutton.FloatingActionButton
+            android:id="@+id/filter_hotel"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:onClick="filtrar"
+            riotour:fab_addButtonSize="mini"
+            riotour:fab_colorNormal="@color/light_blue"
+            riotour:fab_colorPressed="@color/blue"
+            riotour:fab_icon="@drawable/hotel"
+            riotour:fab_title="Hotéis" />
+
+        <com.getbase.floatingactionbutton.FloatingActionButton
+            android:id="@+id/filter_monument"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:onClick="filtrar"
+            riotour:fab_addButtonSize="mini"
+            riotour:fab_colorNormal="@color/light_blue"
+            riotour:fab_colorPressed="@color/blue"
+            riotour:fab_icon="@drawable/monumento"
+            riotour:fab_title="Monumentos" />
+
+        <com.getbase.floatingactionbutton.FloatingActionButton
+            android:id="@+id/filter_museum"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:onClick="filtrar"
+            riotour:fab_addButtonSize="mini"
+            riotour:fab_colorNormal="@color/light_blue"
+            riotour:fab_colorPressed="@color/blue"
+            riotour:fab_icon="@drawable/museu"
+            riotour:fab_title="Museus" />
+
+        <com.getbase.floatingactionbutton.FloatingActionButton
+            android:id="@+id/filter_tourist_spot"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:onClick="filtrar"
+            riotour:fab_addButtonSize="mini"
+            riotour:fab_colorNormal="@color/light_blue"
+            riotour:fab_colorPressed="@color/blue"
+            riotour:fab_icon="@drawable/ponto_turistico"
+            riotour:fab_title="Pontos Turisticos" />
+
+        <com.getbase.floatingactionbutton.FloatingActionButton
+            android:id="@+id/filter_beach"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:onClick="filtrar"
+            riotour:fab_addButtonSize="mini"
+            riotour:fab_colorNormal="@color/light_blue"
+            riotour:fab_colorPressed="@color/blue"
+            riotour:fab_icon="@drawable/praia"
+            riotour:fab_title="Praias" />
+    </com.getbase.floatingactionbutton.FloatingActionsMenu>
 
     <RelativeLayout
         android:id="@+id/detalhe"
