--- a/app/src/main/res/values/color.xml
+++ b/app/src/main/res/values/color.xml
@@ -5,4 +5,5 @@
     <color name="white">#FFFFFF</color>
     <color name="black">#fd000000</color>
     <color name="dark_gray">#212121</color>
+    <color name="light_gray">#ff6a6a6a</color>
 </resources>
