--- a/app/src/main/res/layout-land/activity_maps.xml
+++ b/app/src/main/res/layout-land/activity_maps.xml
@@ -44,7 +44,7 @@
             android:id="@+id/filter_hotel"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:onClick="filtrar"
+            android:onClick="filtrarLugares"
             riotour:fab_addButtonSize="mini"
             riotour:fab_colorNormal="@color/light_blue"
             riotour:fab_colorPressed="@color/blue"
@@ -55,7 +55,7 @@
             android:id="@+id/filter_monument"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:onClick="filtrar"
+            android:onClick="filtrarLugares"
             riotour:fab_addButtonSize="mini"
             riotour:fab_colorNormal="@color/light_blue"
             riotour:fab_colorPressed="@color/blue"
@@ -66,7 +66,7 @@
             android:id="@+id/filter_museum"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:onClick="filtrar"
+            android:onClick="filtrarLugares"
             riotour:fab_addButtonSize="mini"
             riotour:fab_colorNormal="@color/light_blue"
             riotour:fab_colorPressed="@color/blue"
@@ -77,7 +77,7 @@
             android:id="@+id/filter_tourist_spot"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:onClick="filtrar"
+            android:onClick="filtrarLugares"
             riotour:fab_addButtonSize="mini"
             riotour:fab_colorNormal="@color/light_blue"
             riotour:fab_colorPressed="@color/blue"
@@ -88,7 +88,7 @@
             android:id="@+id/filter_beach"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:onClick="filtrar"
+            android:onClick="filtrarLugares"
             riotour:fab_addButtonSize="mini"
             riotour:fab_colorNormal="@color/light_blue"
             riotour:fab_colorPressed="@color/blue"
