Remover campos vazios das telas de detalhe.

--- a/app/src/main/res/layout/fragment_detalhe_hotel.xml
+++ b/app/src/main/res/layout/fragment_detalhe_hotel.xml
@@ -79,6 +79,18 @@
             android:isIndicator="true"
             android:numStars="5"
             tools:rating="4" />
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="10dp"
+        android:orientation="horizontal">
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/campo_categoria" />
 
         <TextView
             android:id="@+id/campo_categoria_texto"
