--- a/app/src/main/res/layout/fragment_detalhe_hotel.xml
+++ b/app/src/main/res/layout/fragment_detalhe_hotel.xml
@@ -48,10 +48,11 @@
         android:layout_marginTop="10dp"
         android:orientation="horizontal">
 
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/campo_email" />
+        <ImageView
+            android:layout_width="20dp"
+            android:layout_height="20dp"
+            android:src="@android:drawable/ic_dialog_email"
+            android:tint="@color/blue" />
 
         <TextView
             android:id="@+id/campo_email"
@@ -160,10 +161,11 @@
         android:layout_marginTop="10dp"
         android:orientation="horizontal">
 
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/campo_telefone" />
+        <ImageView
+            android:layout_width="20dp"
+            android:layout_height="20dp"
+            android:src="@android:drawable/stat_sys_phone_call"
+            android:tint="@color/blue" />
 
         <TextView
             android:id="@+id/campo_telefone"
