Alterações nas interfaces

--- a/app/src/main/res/layout-land/activity_maps.xml
+++ b/app/src/main/res/layout-land/activity_maps.xml
@@ -16,10 +16,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
+
         android:layout_alignParentRight="true"
-        android:layout_centerHorizontal="true"
-        android:layout_marginBottom="60dp"
-        android:layout_marginRight="5dp"
         riotour:fab_colorNormal="#64B5F6"
         riotour:fab_colorPressed="#2196F3"
         riotour:fab_icon="@android:drawable/ic_menu_mylocation"
@@ -29,15 +27,14 @@
         android:id="@+id/multiple_filters"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentTop="true"
-        android:layout_marginLeft="5dp"
-        android:layout_marginTop="10dp"
+
+        android:layout_alignBottom="@id/getCurrentLocation"
+        android:layout_toLeftOf="@id/getCurrentLocation"
         riotour:fab_addButtonColorNormal="@color/light_blue"
         riotour:fab_addButtonColorPressed="@color/blue"
         riotour:fab_addButtonPlusIconColor="@color/white"
         riotour:fab_addButtonSize="mini"
-        riotour:fab_expandDirection="right"
+        riotour:fab_expandDirection="left"
         riotour:fab_labelsPosition="right">
 
         <com.getbase.floatingactionbutton.FloatingActionButton
